Fixed weird gray bg https://stackoverflow.com/q/70659713/3894793

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 }
 .company.bg {
     background-color: #01012a;
+    color: #bbb;
 }
 .btn-contact {
     /* font-size: 20px !important; */
